优化：添加调试模式
