# routes/run/routes.go
@@ -1,0 +1,15 @@
+// Code generated by goctl. DO NOT EDIT.
+package run
+
+import (
+	"k8s-deploy/handler/run"
+	"k8s-deploy/middleware"
+
+	"github.com/gin-gonic/gin"
+)
+
+func RegisterRunRoute(e *gin.Engine) {
+	g := e.Group("")
+	g.Use(middleware.JwtMiddleware, middleware.AuthMiddleware)
+	g.POST("/run/deploy", run.DeployHandle)
+}
